[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/src/Menus/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://game/assets/fonts/HelvetiPixel.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/assets/menu/main_menu/title_screen.png" type="Texture" id=3]
[ext_resource path="res://game/assets/music_and_sounds/soundtrack/Celestial.mp3.ogg" type="AudioStream" id=4]
[ext_resource path="res://game/assets/music_and_sounds/menu/Menu Move.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="TextureRect" parent="."]
margin_right = 320.0
margin_bottom = 180.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="ColorRect" parent="."]
margin_left = 125.638
margin_top = 103.226
margin_right = 202.638
margin_bottom = 120.226
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Continue"]
margin_right = 75.0
margin_bottom = 18.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Continue"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGame" type="ColorRect" parent="."]
margin_left = 125.524
margin_top = 124.399
margin_right = 202.524
margin_bottom = 141.399
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="NewGame"]
margin_right = 77.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
text = "New Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="ColorRect" parent="."]
margin_left = 127.472
margin_top = 148.653
margin_right = 204.472
margin_bottom = 165.653
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Quit"]
margin_right = 77.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 3 )
text = "Quit"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackGroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true

[node name="MenuSelectMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
